<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfromasiKendaraan"
    android:padding="16dp">

    <TextView
        android:id="@+id/txt_informasi_kendaraan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informasi_kendaraan"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_plat_informasikendaraan"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_informasi_kendaraan" android:elevation="4dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:cardCornerRadius="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/blue_01">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="4dp"
            app:cardMaxElevation="4dp"
            app:cardUseCompatPadding="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/black">
            <TextView
                android:id="@+id/plat_info_kendaraan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d_1234_dd"
                android:textSize="48sp"
                android:textColor="@color/white"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_infrormasi_kendaran_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_plat_informasikendaraan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cardCornerRadius="4dp"
        app:cardMaxElevation="4dp"
        app:cardUseCompatPadding="true"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:backgroundTint="@color/blue_01">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <ImageView
                android:id="@+id/img_info_kendaraan"
                android:layout_width="110dp"
                android:layout_height="110dp"
                tools:src="@tools:sample/avatars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/txt_napol_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/img_info_kendaraan"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/nopol"
                android:layout_marginStart="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_detail_napol_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_napol_info_kendaraan"
                app:layout_constraintHorizontal_bias="1"
                android:text="@string/txt_contoh_plat"
                android:layout_marginStart="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_merekn_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_napol_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/img_info_kendaraan"
                android:text="@string/merk_kendaraan"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_detail_merk_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toBottomOf="@id/txt_detail_napol_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/txt_merekn_info_kendaraan"
                app:layout_constraintHorizontal_bias="1"
                android:text="@string/txt_merek_plat"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/txt_model_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_merekn_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/img_info_kendaraan"
                android:text="@string/model"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_detail_model_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_merk_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/txt_model_info_kendaraan"
                app:layout_constraintHorizontal_bias="1"
                android:text="@string/txt_model_kendaraan"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/txt_nomorrangka_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_model_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/img_info_kendaraan"
                android:text="@string/no_rangka"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_detail_nomorrangka_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_model_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/txt_nomorrangka_info_kendaraan"
                app:layout_constraintHorizontal_bias="1"
                android:text="@string/txt_nomorranka_kendaraan"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>

            <TextView
                android:id="@+id/txt_nomormesin_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/txt_nomorrangka_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/img_info_kendaraan"
                android:text="@string/no_mesin"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/txt_detail_nomormesin_info_kendaraan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_detail_nomorrangka_info_kendaraan"
                app:layout_constraintStart_toEndOf="@id/txt_nomormesin_info_kendaraan"
                app:layout_constraintHorizontal_bias="1"
                android:text="@string/txt_nomormesin_kendaraan"
                android:layout_marginStart="4dp"
                android:textSize="12sp"
                android:layout_marginTop="4dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tag_info_kendaraan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cv_infrormasi_kendaran_detail"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/tag_kendaraan"
        android:textSize="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tag_kendaraan"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tag_info_kendaraan"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/blue_01">
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/tag_icon_info"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/cv_tag_kendaraan"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/green_01">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_tag_info_icon_kendaraan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:listitem="@layout/tag_icon"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txt_puji_pengendara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tag_icon_info"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:text="@string/puji_pengendara"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_puji_pengendara"
        android:layout_width="match_parent"
        android:layout_height="120dp"
       app:layout_constraintTop_toBottomOf="@id/txt_puji_pengendara"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/blue_01">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_puji_pengendara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/lay_puji_pengendara"
            android:padding="16dp"/>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>